styles: fix white space

--- a/src/component/Appointment-Header/AppointmentHeader.module.scss
+++ b/src/component/Appointment-Header/AppointmentHeader.module.scss
@@ -42,7 +42,7 @@
 }
 
 .sentence_wrapper {
-  margin-top: 2.2em;
+  margin-top: 2em;
   padding: 0 7.8%;
 
   @media screen and (min-width: 768px) {
