--- a/src/component/Calendar/Calendar.module.scss
+++ b/src/component/Calendar/Calendar.module.scss
@@ -48,6 +48,7 @@
   font-style: normal;
   font-weight: 500;
   font-size: 48px;
+  margin-top: 0.5em;
   line-height: 72px;
   color: #000000;
   text-align: left;
