--- a/src/component/Header/Header.module.scss
+++ b/src/component/Header/Header.module.scss
@@ -34,7 +34,7 @@
     line-height: 48px;
     font-weight: 500;
     line-height: 72px;
-    margin-top: 0.8em;
+    margin-top: 0.5em;
     @media screen and (max-width: 767px) {
       font-size: 32px;
       line-height: 48px;
